novos metodos de logout e linkwithgoogle e envio de providers no endpoint GetMe
