# internal/features/auth/dto.go
@@ -13,6 +13,7 @@ type LoginResponse struct {
 	RefreshToken string            `json:"refresh_token"`
 	ExpiresIn    int64             `json:"expires_in"`
 	User         user.UserResponse `json:"user"`
+	Providers    []string          `json:"providers"`
 }
 
 type RefreshRequest struct {
